--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.0.1",
+    "react-select": "^5.10.1",
     "react-spinners": "^0.15.0",
     "swiper": "^11.1.15"
   },
